--- a/app/templates/base_old.html
+++ b/app/templates/base_old.html
@@ -1,13 +1,5 @@
 {% extends "bootstrap/base.html" %}
-{% macro left_sidebar() -%}
-  <div class="col-md-2">
-    <a href="{{ url_for('main.register_dataset') }}" class="btn btn-success btn-lg btn-block">Register dataset</a>
-  <h3 align="center">Browse by</h3>
-  <a href="{{url_for('main.users_list')}}" class="btn btn-default btn-lg btn-block">User name</a>
-  <a href="{{url_for('main.categories_list')}}" class="btn btn-default btn-lg btn-block">Dataset category</a>
-  <a href="{{url_for('main.keywords_list')}}" class="btn btn-default btn-lg btn-block">Keyword</a>
-</div>
-{%- endmacro %}
+
 {% block title %} DataShare {% endblock %}
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
@@ -38,10 +30,6 @@
 {% block content %}
 <div class="containter">
 
-    {% block page_content %}
-<div class="col-md-4">
-  <p> jakies informacje</p>
-</div>
-  {% endblock %}
+    {% block page_content %}{% endblock %}
 </div>
 {% endblock %}
