--- a/app/templates/categories_list.html
+++ b/app/templates/categories_list.html
@@ -2,12 +2,18 @@
 
 {% block content %}
   <div class="page-header">
-    <h1> There are the following categories in the database:</h1>
+    <h1 align="center"> There are the following categories in the database:</h1>
   </div>
+    {% block page_content %}
+  {{ left_sidebar() }}
+   <div class="col-md-10">
+
     <ul>
       {% for category in categories %}
-      <li><a href="{{ url_for('main.categories_datasets', category_id=category.id, viewer_id=viewer_id) }}"> {{ category.category_name }}</a></li>
+      <li><a href="{{ url_for('main.categories_datasets', category_id=category.id) }}"> {{ category.category_name }}</a></li>
       {% endfor %}
     </ul>
+   </div>
 {% endblock %}
+   {% endblock %}
     
