--- a/app/templates/keywords_list.html
+++ b/app/templates/keywords_list.html
@@ -1,14 +1,19 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="page-header">
-    <h1> There are the following keywords in the database:</h1>
+    <h1 align="center"> There are the following keywords in the database:</h1>
 </div>
+  {% block page_content %}
+  {{ left_sidebar() }}
+   <div class="col-md-10">
+
     <ul>
   {% for idx in keywords %}
-    <li><a href="{{ url_for('main.keywords_datasets', keyword_id=idx.id, viewer_id=viewer_id) }}"> {{ idx.keyword }}</a></li>
+    <li><a href="{{ url_for('main.keywords_datasets', keyword_id=idx.id) }}"> {{ idx.keyword }}</a></li>
 
   {% endfor %}
     </ul>
-
+   </div>
 {% endblock %}
+   {% endblock %}
 
