--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -5,8 +5,12 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Register</h1>
+    <h1 align="center">Register</h1>
 </div>
+<div class="col-md-4">
+
+</div>
+
 <div class="col-md-4">
     {{ wtf.quick_form(form) }}
 </div>
