--- a/app/templates/present_dataset.html
+++ b/app/templates/present_dataset.html
@@ -11,12 +11,14 @@
   <ul>
     <li><em>name</em>: {{ dataset.name }}</li>
     <li><em>owner</em>: {{ dataset.user.fullname }}</li>
-    <li><em>owner's email</em> (click to send message): <a href="{{url_for('main.contact_owner', owner_id= dataset.user.id, dataset_id=dataset.id)}}">{{ dataset.user.email }}</a> </li>
     <li><em>number of files</em>: {{ dataset.numberOfFiles }}</li>
     <li><em>category</em>: {{ dataset.category.category_name }}</li>
     <li><em>keywords</em>: {{ keywords }} </li>
     <li><em>description</em>: {{ dataset.description }}</li>
   </ul>
+       <div class="col-md-3" align="center">
+       <a href="{{url_for('main.contact_owner', owner_id= dataset.user.id, dataset_id=dataset.id)}}" class="btn btn-primary btn-lg btn-block">Contact owner</a>
+       </div>
    </div>
   {% endblock %}
 {% endblock %}
